--- a/k8s/EFK/elastic.yaml
+++ b/k8s/EFK/elastic.yaml
@@ -103,6 +103,17 @@ spec:
             runAsUser: 0
             runAsGroup: 0
           command: ['sh', '-c', 'sysctl -w vm.max_map_count=262144']
+        - name: install-plugins
+          # ref: https://www.elastic.co/guide/en/elasticsearch/plugins/current/installation.html
+          # analysis need sudo, which means it should run as root.
+          securityContext:
+            runAsUser: 0
+            runAsGroup: 0
+          command:
+            - sh
+            - -c
+            - |
+              bin/elasticsearch-plugin install --batch https://get.infini.cloud/elasticsearch/analysis-ik/8.13.4
         containers:
         - name: elasticsearch
           resources:
